fix : 권한 관리를 appSpec 에서 집중 관리 하도록 일원화 before_Install 에서 권한 분리를 시키려고 하고 있지만 appspec 이 제일 먼저 실행 되므로 해당 사항을 반영

--- a/appspec.yml
+++ b/appspec.yml
@@ -19,6 +19,34 @@ permissions:
     mode: 644
     type:
       - file
+  - object: /home/ubuntu/app/docker
+    pattern: "**/*"
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
+    type:
+      - directory
+  - object: /home/ubuntu/app/logs
+    pattern: "**/*"
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
+    type:
+      - directory
+  - object: /home/ubuntu/app/certbot
+    pattern: "**/*"
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
+    type:
+      - directory
+  - object: /home/ubuntu/app/ssl
+    pattern: "**/*"
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
+    type:
+      - directory
   - object: /home/ubuntu/app/.env
     mode: 600
     owner: ubuntu
@@ -43,7 +71,7 @@ hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
   AfterInstall:
     - location: scripts/set_environment.sh
       timeout: 300
