--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,6 +18,7 @@ env:
   DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/spring
   API_DOMAIN: api.togerun.shop
   EMAIL: ${{ secrets.EMAIL }}
+  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
 jobs:
   build-and-deploy:
@@ -26,6 +27,30 @@ jobs:
       contents: read
 
     steps:
+      # 배포 시작 알림
+      - name: Notify Deploy Start
+        uses: 8398a7/action-slack@v3
+        with:
+          status: custom
+          custom_payload: |
+            {
+              "attachments": [{
+                "color": "#36a64f",
+                "blocks": [
+                  {
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "🚀 *배포가 시작되었습니다*\n\n*Branch:* ${{ github.ref }}\n*Trigger:* ${{ github.event_name }}\n*Commit Message:* ${{ github.event.head_commit.message }}"
+                    }
+                  }
+                ]
+              }]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ env.SLACK_WEBHOOK_URL }}
+        if: success()
+
       # Step 1: 소스 코드 체크아웃
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -58,7 +83,38 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build --info
 
-      # Step 7: Docker 빌드 컨텍스트 생성
+      # Step 7: Gradle 빌드 결과 알림
+      - name: Notify Build Result
+        uses: 8398a7/action-slack@v3
+        with:
+          status: custom
+          custom_payload: |
+            {
+              "attachments": [{
+                "color": "${{ job.status == 'success' && '#36a64f' || '#dc3545' }}",
+                "blocks": [
+                  {
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "${{ job.status == 'success' && '✅ *빌드 성공*' || '❌ *빌드 실패*' }}\n\n*Image:* ${{ env.DOCKER_IMAGE }}:latest\n*Build Time:* ${{steps.current-time.outputs.formattedTime}}"
+                    }
+                  },
+                  {
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "*변경사항:*\n```${{ github.event.head_commit.message }}```"
+                    }
+                  }
+                ]
+              }]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ env.SLACK_WEBHOOK_URL }}
+        if: always()
+
+      # Step 8: Docker 빌드 컨텍스트 생성
       - name: Create build context
         run: |
           mkdir -p docker-build
@@ -73,14 +129,14 @@ jobs:
           cp "$EXEC_JAR" docker-build/app.jar
           cp Dockerfile docker-build/
 
-      # Step 8: DockerHub 로그인
+      # Step 9: DockerHub 로그인
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 9: Docker 이미지 빌드 및 푸시
+      # Step 10: Docker 이미지 빌드 및 푸시
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -88,12 +144,12 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/spring:latest
 
-      # Step 10: 배포 패키지 생성
+      # Step 11: 배포 패키지 생성
       - name: Create deployment package
         run: |
           mkdir -p deploy
           mkdir -p deploy/nginx/conf.d
-        
+          
           # Docker 관련 파일 복사
           cp -r docker-build/* deploy/
           cp docker-compose.blue.yml deploy/
@@ -159,6 +215,7 @@ jobs:
           APP_DIR=/home/ubuntu/app
           DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
           REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
+          SLACK_WEBHOOK_URL=${{ secrets.SLACK_WEBHOOK_URL }}
           ENVEOF
           
           # 파일 권한 및 소유권 설정
@@ -167,7 +224,6 @@ jobs:
           chmod 600 "$APP_DIR/.env"
           chmod 755 "$APP_DIR/nginx"
           chmod 644 "$APP_DIR/nginx/*.conf"
-        
           
           # 환경 변수 파일 확인
           echo "Verifying .env file creation:"
@@ -206,7 +262,7 @@ jobs:
           # 배포 패키지 생성
           cd deploy && zip -r ../deploy.zip .
 
-      # Step 11: AWS 자격 증명 설정
+      # Step 12: AWS 자격 증명 설정
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -214,12 +270,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # Step 12: S3에 배포 패키지 업로드
+      # Step 13: S3에 배포 패키지 업로드
       - name: Upload to S3
         run: |
           aws s3 cp deploy.zip s3://${{ secrets.S3_BUCKET_NAME }}/deploy.zip
 
-      # Step 13: CodeDeploy 배포 시작
+      # Step 14: CodeDeploy 배포 시작
       - name: Start CodeDeploy Deployment
         run: |
           aws deploy create-deployment \
@@ -229,7 +285,40 @@ jobs:
             --deployment-config-name CodeDeployDefault.AllAtOnce \
             --file-exists-behavior OVERWRITE
 
-      # Step 14: 배포 시간 기록
+      # Step 15: 최종 배포 결과 알림
+      - name: Notify Deploy Result
+        uses: 8398a7/action-slack@v3
+        with:
+          status: custom
+          custom_payload: |
+            {
+              "attachments": [{
+                "color": "${{ job.status == 'success' && '#36a64f' || '#dc3545' }}",
+                "blocks": [
+                  {
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "${{ job.status == 'success' && '🎉 *배포 완료*' || '💥 *배포 실패*' }}\n\n*Application:* ${{ secrets.CODE_DEPLOY_APP_NAME }}\n*Environment:* Production\n*Deploy Time:* ${{steps.current-time.outputs.formattedTime}}"
+                    }
+                  },
+                  {
+                    "type": "context",
+                    "elements": [
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Triggered by:* ${{ github.actor }}"
+                      }
+                    ]
+                  }
+                ]
+              }]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ env.SLACK_WEBHOOK_URL }}
+        if: always()
+
+      # Step 16: 배포 시간 기록
       - name: Get Current Time
         uses: 1466587594/get-current-time@v2
         id: current-time
