--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,8 @@ files:
   - source: /
     destination: /home/ubuntu/app
 files_exists_behavior: overwrite
+environment_variables:
+  SLACK_WEBHOOK_URL: "#{SLACK_WEBHOOK_URL}"
 permissions:
   - object: /home/ubuntu/app/scripts
     pattern: "*.sh"
