--- a/docker-compose.blue.yml
+++ b/docker-compose.blue.yml
@@ -1,4 +1,3 @@
-
 services:
   nginx:
     image: nginx:alpine
@@ -22,6 +21,45 @@ services:
       retries: 3
       start_period: 30s
 
+  redis-master:
+    image: redis:alpine
+    container_name: redis-master
+    command: redis-server --requirepass "${REDIS_PASSWORD}"
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-master:/data
+    networks:
+      - ubuntu_this_network
+    restart: always
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
+  redis-replica:
+    image: redis:alpine
+    container_name: redis-replica
+    command: redis-server --requirepass "${REDIS_PASSWORD}" --replicaof redis-master 6379 --masterauth "${REDIS_PASSWORD}"
+    ports:
+      - "6380:6379"
+    depends_on:
+      redis-master:
+        condition: service_healthy
+    volumes:
+      - redis-replica:/data
+    networks:
+      - ubuntu_this_network
+    restart: always
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
   spring-boot-blue:
     container_name: spring-boot-blue
     image: ${DOCKER_USERNAME}/spring:latest
@@ -33,12 +71,17 @@ services:
       - SERVER_PORT=8081
       - SPRING_DATA_REDIS_HOST=redis-master
       - SPRING_DATA_REDIS_PASSWORD=${REDIS_PASSWORD}
+    depends_on:
+      redis-master:
+        condition: service_healthy
+      redis-replica:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8081/actuator/health"]
       interval: 10s
       timeout: 5s
       retries: 3
-      start_period: 40s
+      start_period: 60s
     networks:
       - ubuntu_this_network
     restart: always
@@ -50,33 +93,6 @@ services:
       - ${APP_DIR}/certbot/conf:/etc/letsencrypt:ro
       - ${APP_DIR}/certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-
-
-  redis-master:
-    image: redis:alpine
-    container_name: redis-master
-    command: redis-server --requirepass "${REDIS_PASSWORD}"
-    ports:
-        - "6379:6379"
-    volumes:
-      - redis-master:/data
-    networks:
-      - ubuntu_this_network
-    restart: always
-
-  redis-replica:
-    image: redis:alpine
-    container_name: redis-replica
-    command: redis-server --requirepass "${REDIS_PASSWORD}" --replicaof redis-master 6379 --masterauth "${REDIS_PASSWORD}"
-    ports:
-      - "6380:6379"
-    depends_on:
-      - redis-master
-    volumes:
-      - redis-replica:/data
-    networks:
-      - ubuntu_this_network
-    restart: always
 
 networks:
   ubuntu_this_network:
