--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -1,4 +1,3 @@
-
 services:
   nginx:
     image: nginx:alpine
@@ -22,35 +21,6 @@ services:
       retries: 3
       start_period: 30s
 
-  spring-boot-green:
-    container_name: spring-boot-green
-    image: ${DOCKER_USERNAME}/spring:latest
-    ports:
-      - "8082:8082"
-    environment:
-      - JAVA_OPTS=-XX:+UseG1GC -Xms256m -Xmx512m
-      - SPRING_PROFILES_ACTIVE=green,prod
-      - SERVER_PORT=8082
-      - SPRING_DATA_REDIS_HOST=redis-master
-      - SPRING_DATA_REDIS_PASSWORD=${REDIS_PASSWORD}
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8082/actuator/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 40s
-    networks:
-      - ubuntu_this_network
-    restart: always
-
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
-    volumes:
-      - ${APP_DIR}/certbot/conf:/etc/letsencrypt:ro
-      - ${APP_DIR}/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-
   redis-master:
     image: redis:alpine
     container_name: redis-master
@@ -62,6 +32,12 @@ services:
     networks:
       - ubuntu_this_network
     restart: always
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
 
   redis-replica:
     image: redis:alpine
@@ -70,12 +46,53 @@ services:
     ports:
       - "6380:6379"
     depends_on:
-      - redis-master
+      redis-master:
+        condition: service_healthy
     volumes:
       - redis-replica:/data
     networks:
       - ubuntu_this_network
     restart: always
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+
+  spring-boot-green:
+    container_name: spring-boot-green
+    image: ${DOCKER_USERNAME}/spring:latest
+    ports:
+      - "8082:8082"
+    environment:
+      - JAVA_OPTS=-XX:+UseG1GC -Xms256m -Xmx512m
+      - SPRING_PROFILES_ACTIVE=green,prod
+      - SERVER_PORT=8082
+      - SPRING_DATA_REDIS_HOST=redis-master
+      - SPRING_DATA_REDIS_PASSWORD=${REDIS_PASSWORD}
+    depends_on:
+      redis-master:
+        condition: service_healthy
+      redis-replica:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8082/actuator/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 60s
+    networks:
+      - ubuntu_this_network
+    restart: always
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ${APP_DIR}/certbot/conf:/etc/letsencrypt:ro
+      - ${APP_DIR}/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 networks:
   ubuntu_this_network:
