refactor : 숨김 파일 접근 차단, 에러페이지 리디렉션 메인 페이지, RateLimit 추가

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,22 +8,26 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    # Rate Limiting 설정
+    limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
+    limit_req_status 429;
+
     # 블루/그린 업스트림 설정
     upstream blue {
-      server spring-boot-blue:8081;
-      keepalive 32;
+        server spring-boot-blue:8081;
+        keepalive 32;
     }
 
     upstream green {
-      server spring-boot-green:8082;
-      keepalive 32;
+        server spring-boot-green:8082;
+        keepalive 32;
     }
 
     map $http_origin $cors_origin {
         default "";
-        "https://www.togerun.shop" "$http_origin";
-        "https://togerun.shop" "$http_origin";
-        "http://localhost:3000" "$http_origin";
+        "https://www.togerun.shop"    "$http_origin";
+        "https://togerun.shop"        "$http_origin";
+        "http://localhost:3000"       "$http_origin";
     }
 
     # Access Log Format
@@ -48,12 +52,20 @@ http {
     gzip_vary on;
     gzip_proxied any;
     gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
+    gzip_types text/plain text/css text/xml application/json
+               application/javascript application/xml+rss
+               application/atom+xml image/svg+xml;
 
     server {
         listen 80;
         listen [::]:80;
         server_name api.togerun.shop;
+
+        # Block .git access
+        location ~ /\.git {
+            deny all;
+            return 403;
+        }
 
         location /health {
             access_log off;
@@ -77,6 +89,12 @@ http {
 
         ssl_certificate /etc/letsencrypt/live/api.togerun.shop/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/api.togerun.shop/privkey.pem;
+
+        # Block .git access
+        location ~ /\.git {
+            deny all;
+            return 403;
+        }
 
         # SSL 최적화
         ssl_session_cache shared:SSL:10m;
@@ -110,6 +128,9 @@ http {
                 add_header 'Content-Length' 0 always;
                 return 204;
             }
+
+            # Rate Limiting
+            limit_req zone=mylimit burst=20 nodelay;
 
             # 보안 헤더
             add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
@@ -153,9 +174,6 @@ http {
         }
 
         # 에러 페이지 설정
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
-        }
+        error_page 500 502 503 504 = https://togerun.shop;
     }
 }
